--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ version: "3.9"
 services:
   web:
     build: ./myweather
-    env_file: myweather/myweather/.env
+    env_file: .env
     command: python manage.py runserver 0.0.0.0:8000
     volumes:
       - ./myweather/:/usr/src/app/
