--- a/myweather/Dockerfile
+++ b/myweather/Dockerfile
@@ -4,14 +4,19 @@ ENV PYTHONUNBUFFERED=1
 WORKDIR usr/src/app
 
 RUN apk update && apk add postgresql-dev gcc python3-dev musl-dev
-#RUN apt-get update && apt-get install postgresql-dev gcc python3-dev musl-dev
 
 RUN pip install --upgrade pip
 COPY ./requirements.txt .
 RUN apk add libffi-dev
 RUN pip install -r requirements.txt
 
+COPY ./entrypoint.sh .
+RUN sed -i 's/\r$//g' /usr/src/app/entrypoint.sh
+RUN chmod +x /usr/src/app/entrypoint.sh
+
 COPY . .
+
+ENTRYPOINT ["/usr/src/app/entrypoint.sh"]
 
 #EXPOSE 5500
 #
