--- a/myweather/requirements.txt
+++ b/myweather/requirements.txt
@@ -15,6 +15,7 @@ daphne==3.0.2
 Django==4.0.2
 django-environ==0.8.1
 frozenlist==1.3.0
+gunicorn==20.1.0
 hyperlink==21.0.0
 idna==3.3
 incremental==21.3.0
