--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 SECRET_KEY='any_secret_key'
 DEBUG=1
-ALLOWED_HOSTS=*
+ALLOWED_HOSTS=smallweather.azurewebsites.net
 SQL_ENGINE=django.db.backends.postgresql_psycopg2
 SQL_DATABASE=weather
 SQL_USER=alex
