--- a/myweather/Dockerfile
+++ b/myweather/Dockerfile
@@ -6,7 +6,7 @@ WORKDIR usr/src/app
 RUN apk update && apk add postgresql-dev gcc python3-dev musl-dev
 
 RUN pip install --upgrade pip
-COPY ../requirements.txt .
+COPY ./requirements.txt .
 RUN apk add libffi-dev
 RUN pip install -r requirements.txt
 
